--- a/HealthWare-ActiveASSIST/HealthWare.ActiveASSIST.Services/HealthWare.ActiveASSIST.Services.csproj
+++ b/HealthWare-ActiveASSIST/HealthWare.ActiveASSIST.Services/HealthWare.ActiveASSIST.Services.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="HealthwareCoreWebLib" Version="1.0.35" />
     <PackageReference Include="iTextSharp.LGPLv2.Core" Version="1.7.5" />
     <PackageReference Include="NETCore.MailKit" Version="2.0.3" />
+    <PackageReference Include="Spire.PDF" Version="8.7.2" />
   </ItemGroup>
 
   <ItemGroup>
