--- a/HealthWare-ActiveASSIST/HealthWare.ActiveASSIST.WebAPI/HealthWare.ActiveASSIST.WebAPI.csproj
+++ b/HealthWare-ActiveASSIST/HealthWare.ActiveASSIST.WebAPI/HealthWare.ActiveASSIST.WebAPI.csproj
@@ -38,6 +38,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.10" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
+    <PackageReference Include="Spire.PDF" Version="8.7.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="5.6.3" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.6.3" />
