--- a/HealthWare-ActiveASSIST/HealthWare.ActiveASSIST.WebAPI/Config/appsettings.Development.json
+++ b/HealthWare-ActiveASSIST/HealthWare.ActiveASSIST.WebAPI/Config/appsettings.Development.json
@@ -24,8 +24,8 @@
     "Default": "Server=localhost;Database=ActiveASSIST_New;User Id=hwsadmin;Password=Summer1;Integrated Security=False;MultipleActiveResultSets=True"
   },
   "App": {
-    "ServerRootAddress": "http://localhost/ActiveAssistAPI/HealthwareAPI/",
-    "ClientRootAddress": "http://localhost/ActiveAssistClient/",
+    "ServerRootAddress": "http://localhost:21021/HealthwareAPI/",
+    "ClientRootAddress": "http://localhost:4200/",
     "CorsOrigins": "http://localhost:4200,http://localhost:8080,http://localhost:8081,http://localhost:3000,https://facilitatortest.eligibilityadvocates.com/ActiveAssistAPI,http://localhost/ActiveAssistClient/"
   },
   "AllowedHosts": "*",
