--- a/HealthWare-ActiveASSIST/Healthware.ActiveAssist.WebApp/package.json
+++ b/HealthWare-ActiveASSIST/Healthware.ActiveAssist.WebApp/package.json
@@ -51,6 +51,9 @@
     "ngx-mask": "^12.0.0",
     "ngx-permissions": "^7.0.3",
     "ngx-toastr": "^14.0.0",
+    "pdf-lib": "^1.17.1",
+    "pdfjs": "^2.4.7",
+    "pdfjs-dist": "^2.14.305",
     "popper.js": "^1.16.1",
     "pspdfkit": "^2021.6.1",
     "router": "^1.3.5",
